--- a/source/template/common/footer__works.jade
+++ b/source/template/common/footer__works.jade
@@ -1,14 +1,14 @@
 footer.footer__works 
    .upper__section
-     ul.bottom__navigation
+     ul.bottom__navigation.cl-effect-16
       li.upper__section--item
-       a(href="#").upper__section--link Мои работы
+       a(href="#",data-hover="Мои работы").upper__section--link Мои работы
       li.upper_section--item
-       a(href="#").upper__section--link Обо мне
+       a(href="#",data-hover="Обо мне").upper__section--link Обо мне
       li.upper_section--item
-       a(href="#").upper__section--link Блог
+       a(href="#",data-hover="Блог").upper__section--link Блог
       li.upper_section--item
-       a(href="#").upper__section--link Авторизация
+       a(href="#",data-hover="Авторизация").upper__section--link Авторизация
      ul.social__links
        li.upper__section--item__right
         a(href="#").upper__section--link--right
