--- a/source/style/common/header.scss
+++ b/source/style/common/header.scss
@@ -146,8 +146,21 @@
     text-align: center;
     list-style: none;
     font-size: 3.9375em;
+    transform: scale(0);
+    transition: none;
+
+}
+.nav__btn .nav__item {
+
+
+
 }
 
+.active +.nav .nav__item{
+    opacity: 1;
+    transform: scale(1);
+    transition: all 0.3s cubic-bezier(0.77, 0.6, 0.31, 1.2) 0.6s;
+}
 
 .nav__item:not(:last-child) {
     margin-top: 0;
@@ -161,23 +174,33 @@
     color: #fff;
     text-decoration: none;
     font-family: 'BERNIERRegular-Regular',sans-serif;
-  &:before &:after,  {
-        position: absolute;
-        content:'';
-        width: 22px;
-        height: 5px;
-        background: rgb(84, 230, 211);
-        top: 36px;
-        
-    
-  }
-  &:hover,&:before {
-    left: -41px;
-    display: visible;
-  }
-  &:after {
-    right: -33px;
-  }
+    padding: 0 35px;
+&::before, &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    margin-top: -2px;
+    vertical-align: middle;
+    display: inline-block;
+    height: 5px;
+    width: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.7);
+    transition: all 0.2s;
+}
+&:before {
+    left: 0;
+    margin-right: 15px;
+}
+
+&:after {
+    right: 0;
+    margin-left: 15px;
+}
+&:hover:before,&:hover:after {
+    width: 22px;
+}
 }
 
 
