--- a/source/style/pages/about.scss
+++ b/source/style/pages/about.scss
@@ -189,10 +189,6 @@ height: auto;
   text-align: left;
   color: #5d5a55;
 }
-.map-section {
-  min-height: 100vh;
-position: relative;
-}
 
 
 .section-title--about {
@@ -299,8 +295,19 @@ position: relative;
 
 .map {
   position: relative;
+   min-height: calc(650px + 150px);
+   height: calc(100% + 150px);
+   margin: 0 0 -150px 0;
+   overflow: hidden;
+   z-index: -1;
+
+
 }
 
+.map-section {
+height: 100%;
+z-index: 0;
+}
 
 .contacts {
   position: absolute;
@@ -311,12 +318,11 @@ position: relative;
   min-height: 293px;
   min-width: 320px;
   background: rgba(244,245,240,.85);
-  padding: 0 40px;
-  padding-bottom: 35px;
+  padding: 0 40px 35px 40px;
   font: 500 1.14rem 'Roboto', Arial, sans-serif;
   color: #566358;
   border-radius: 5px;
-      box-shadow: 0px 0px 1px rgba(55, 62, 66, 0.62);
+  box-shadow: 1px 1px 8px rgba(55, 62, 66, 0.62);
 }
 
 .contacts__heading {
@@ -360,16 +366,17 @@ position: relative;
   vertical-align: middle;
 }
 
-.contacts__item svg {
+
+.contact-icon  {
+  width: 30px;
+  height: 26px;
   position: absolute;
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-}
-
-.contacts__item svg * {
   fill: #61dac9;
 }
+
 
 .contacts__text {
   margin-left: 10px;
