--- a/source/style/pages/blog.scss
+++ b/source/style/pages/blog.scss
@@ -20,17 +20,21 @@
 	width: 100%;
 }
 
-.wrapper__list {
-	height: 1px;
-	position: relative;
-}
+
 .aside {
-	// margin: 65px 0 0 65px;
  	text-align: center;
  	float: left;
  	width: 30%;
- 	// height: 1px;
+
 }
+.swipe__btn {
+	display: none;
+}
+.wrapper__list {
+	height: 400px;
+	position: relative;
+}
+
 .aside__list {
 	position: absolute;
 	top: 0;
@@ -45,16 +49,18 @@
 	width: 100%;
 	right: 0;
 	border-right: 3px solid rgba(0, 0, 0, 0);
+	
 }
 .aside__list-item {
 	text-align: right;
 	width: 287px;
 	display: block;
-}
-.aside__item-link:hover {
-	border-right: 3px solid #00bfa5;
+	 &.active .aside__item-link {
+  	 border-right: 3px solid #00bfa5;
 	color:#00bfa5;
+  }
 }
+.aside__item-link
 .item__link-text {
 	padding: 10px 15px 10px 0;
 	line-height: 28px;
@@ -117,53 +123,130 @@
 	width: 100%
 }
 
-@media (min-width: 1200) and (max-width: 1799px) {
+@media (min-width: 1200px) and (max-width: 1799px) {
+
+.aside__list {
+	left: 20px;
 }
 
+.aside__list-item {
+	width: 350px;
+
+}
+
+
+}
 @media (min-width: 768px) and (max-width: 1199px) {
 
 .aside {
-  position: fixed;
-  top: 40px;
-  left: 0;
-  -webkit-transition-duration: 0.3s;
-  -moz-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  &.active .aside__list {
-  	height: 100vh;
-  	background-color: #58d5c4;
-  	color: #fff;
-  	left: 250px;
-
-  }
-
-}
-.aside__list {
-  position: fixed;
-  top: 40px;
-  left: -250px;
-  -webkit-transition-duration: 0.3s;
-  -moz-transition-duration: 0.3s;
-  -o-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+    position: fixed;
+    float: none;
+    top: 0;
+    left: -27%;
+    bottom: 0;
+    z-index: 4;
+    width: 27%;
+    height: 100%;
+    background-color: #00bfa5;
+    transition: all 0.7s;
+    display: block;
    &.active {
-  	height: 100vh;
-  	background-color: #58d5c4;
-  	color: #fff;
-  	left: 250px;
+   	left: 0;
+   }
+}
 
+
+.aside__list {
+z-index: 5;
+display: block;
+top: 50%;
+left: 10%;
+}
+
+
+
+.aside__list-item {
+	width: 250px;
+ &.active .item__link-text {
+  	 
+	color:#fff;
   }
 }
 
-.aside__list :hover {
-  left: 250px;
+.swipe__btn {
+	width: 94px;
+    height: 85px;
+    position: absolute;
+    top: 50%;
+    right: -25px;
+    background-color: #00bfa5;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    display: block;
 }
-.aside .aside__list.active {
-  left: 0;
+
+.article {
+	width: 100%;
+	padding: 0 50px;
+}
+.article__list-item::after {
+	width: 300px;
 }
 
 }
-// @media (min-width: 320px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) {
+.aside {
+    position: fixed;
+    float: none;
+    top: 0;
+    left: -60%;
+    bottom: 0;
+    z-index: 4;
+    width: 60%;
+    height: 100%;
+    background-color: #00bfa5;
+    transition: all 0.7s;
+    display: block;
+   &.active {
+   	left: 0;
+   }
+}
 
-// }
+.aside__list {
+z-index: 5;
+display: block;
+top: 50%;
+
+}
+
+
+
+.aside__list-item {
+	width: 200px;
+
+}
+
+.swipe__btn {
+	width: 94px;
+    height: 85px;
+    position: absolute;
+    top: 50%;
+    right: -25px;
+    background-color: #00bfa5;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    display: block;
+}
+
+.article {
+	width: 100%;
+	padding: 0 25px;
+}
+.article__list-item::after {
+	width: 300px;
+}
+}
