--- a/source/style/common/header.scss
+++ b/source/style/common/header.scss
@@ -6,59 +6,56 @@
     left: 0;
     width: 100%;
     height: auto;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
     justify-content: space-between;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
     flex-direction: row;
     z-index: 1000;
 }
 
  
 .social__list {
-    margin-top: 35px;
-    margin-bottom: 35px;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin: 0 35px;
+    padding: 0 10px;
     width: 100%;
-    height: 1.375em;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+    height: 2.375em;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
     flex-direction: row;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
     align-items: center;
     list-style: none;
 }
 
+.header__icon {
+    width: 30px;
+    height: 30px;
+    fill:#fff;
+    transition:all 0.5s;
+    opacity: 0.5;
+     &.vk {
+        width: 30px;
+        height: 17px;
+    }
+    &.git {
+        width: 26px;
+        height: 22px;
+    }
+    &.in {
+        width: 24px;
+        height: 24px;
+    }
+    &:hover {
+        opacity:1;
+    }
+}
+
+
 .social__items {
-    margin-left: 15px;
-    margin-right: 15px;
+   margin: 0 15px;
     min-width: 30px;
     height: 100%;
-    font-size: 0;
     &.vk {
         width: 30px;
-    height: 17px;
+        height: 17px;
     }
     &.git {
         width: 26px;
@@ -77,8 +74,7 @@
 {
     margin-top: 31px;
     margin-bottom: 31px;
-    padding-left: 17px;
-    padding-right: 17px;
+    padding: 0 17px;
     width: auto;
     &.social__items {
     	margin: 0 13px;
