--- a/source/style/common/header.scss
+++ b/source/style/common/header.scss
@@ -1,6 +1,46 @@
 /* HEADER STYLES */
-.header
-{
+.sprite-section {
+  display: none;
+}
+
+.preloader__section {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: url('../img/bg.jpg') center center no-repeat;
+    z-index: 20;
+    background-size: cover;   
+}
+
+.preloader__container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%); 
+}
+
+.preloader__round {
+    // fill: transparent;
+    opacity: 0;
+    transition: all 0.3s;
+    
+}
+     .circle{
+       transition: all 3s;
+    } 
+
+.preloader__text {
+  font-size: 20px;
+  color: #fff;
+  position: absolute;
+  top: 55px;
+  left: 50%;
+  transform: translateX(-50%); }
+
+
+.header {
     position: absolute;
     top: 0;
     left: 0;
@@ -9,7 +49,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    z-index: 1000;
+    z-index: 10;
 }
 
  
@@ -67,11 +107,7 @@
     }
 }
 
-
-
-
-.social__list_header
-{
+.social__list_header {
     margin-top: 31px;
     margin-bottom: 31px;
     padding: 0 17px;
@@ -206,7 +242,7 @@
     margin-right: 25px;
     width: 45px;
     height: 43px;
-    z-index: 10000;
+    z-index: 10;
     cursor: pointer;
 }
 
