--- a/source/template/common/_header.jade
+++ b/source/template/common/_header.jade
@@ -1,33 +1,31 @@
 .sprite-section 
        include ../../../build/assets/sprite/sprite.svg
+.preloader__section
+  .preloader__container
+   .preloader__text 0
+   svg.preloader__round(version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   width="144px" height="144px" viewBox="0 0 144 144" enable-background="new 0 0 144 144" xml:space="preserve")
+     circle.circle__outer.circle(opacity="0.4" fill="none" stroke-dasharray="439.822971503" stroke-dashoffset="439.822971503" stroke="#FFFFFF" stroke-width="4" stroke-miterlimit="10" enable-background="new    " cx="72" cy="71.999" r="70")
+     circle.circle__center.circle(opacity="0.7" fill="none" stroke-dasharray="345.575191895" stroke-dashoffset="345.575191895" stroke="#FFFFFF" stroke-width="3.8938" stroke-miterlimit="10" enable-background="new    " cx="72" cy="72" r="55").
+     circle.circle__inner.circle(fill="none" stroke-dasharray="251.327412287" stroke-dashoffset="251.327412287" stroke="#FFFFFF" stroke-width="4" stroke-miterlimit="10" cx="72" cy="72" r="40")
+     text.preloader__inner__text(transform="matrix(1 0 0 1 51.5391 79.0127)" fill="#FFFFFF" font-family="'ArialMT'" font-size="24")
 header.header
+     -var soc = { 'vk' : '#vk', 'git': '#github', 'in' : '#in'}
      ul.social__list.social__list_header
-       li.social__items.vk
-        a(href="#").social__link
-         svg.header__icon.vk
-          use(xlink:href="#vk")
-       li.social__items.git
-        a(href="#").social__link
-         svg.header__icon.git
-          use(xlink:href="#github")
-       li.social__items.in
-        a(href="#").social__link
-         svg.header__icon.in
-          use(xlink:href="#in")
-      nav.nav__wrap
+       each id,type in soc
+        li.social__items(class=type)
+         a(href="#").social__link
+          svg.header__icon(class=type)
+           use(xlink:href="#{id}")
+     nav.nav__wrap
        .nav__btn#nav__btn
-        .menu_burger
-        .menu_burger
-        .menu_burger
+        -for(var i=0;i<3;i++)
+         .menu_burger=i
+        -var menu = { 'Мои работы' : '/works.html','Обо мне' : '/about.html','Блог' : '/blog.html','Авторизация' : '/index.html'}
        ul.nav
-        li.nav__item
-         a.nav__link(href="/works.html") Мои работы
-        li.nav__item
-         a.nav__link(href="/about.html") Обо мне
-        li.nav__item
-         a.nav__link(href="/blog.html") Блог
-        li.nav__item
-         a.nav__link(href="/index.html") Авторизация
+        each href, title in menu
+         li.nav__item
+          a.nav__link(href="#{href}")=title
   .wrapper
     .first-screen
      .bg__image 
